# Viper

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
ViPer Programming Language/: viper_lite.py  viper_lite.spec
Viper-Language/: core.py  interpreter.py  parser.py  viper.py  viper_parser.py  viper_repl.py
Viper-Language/modules/: dns.py  network.py  security.py
Viper/Viper-Lite-main/Viper Language/: interpreter.py  viper_parser.py  viper_repl.py  viper_repl.spec
Viper/Viper-Lite-main/Viper Language/example/: math.vp
examples/: calculator.vpr  hello_world.vpr  webserver.vpr
modules/: security.txt
stdlib/: io.vpr  math.vpr  net.vpr  string.vpr  time.vpr
tests/: test_interpreter.py  test_lexer.py  test_parser.py  test_vpm.py
viper/: __init__.py  __main__.py  compiler.py  interpreter.py  interpreter.txt  lexer.py  parser.py  parser.txt  viper.txt
viper/runtime/: core.txt  dns.py  errors.py  network.txt  security.txt
vpm/: cli.py  registry.py  utils.py
