[metadata]
name = viperlang
version = 1.0.0
description = Viper Programming Language Interpreter
author = GSEJ Company
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
